force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <description>Custom object para Bilhetes de Defeito</description>
    <label>Bilhete de Defeitos</label>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Detalhamento BDs</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bilhete de Defeitos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>