force-app/main/default/objects/Ticket__c/fields/OpeningDate__c.field-meta.xml
<CustomField>
    <fullName>OpeningDate__c</fullName>
    <label>Data da Abertura</label>
    <type>Date</type>
</CustomField>