force-app/main/default/objects/Ticket__c/fields/PrevisionDate__c.field-meta.xml
<CustomField>
    <fullName>PrevisionDate__c</fullName>
    <description>Campo para retorno da data de previsão de solução do WFM.</description>
    <label>Previsão de Solução</label>
    <type>Date</type>
</CustomField>