force-app/main/default/objects/Ticket__c/fields/SolutionDate__c.field-meta.xml
<CustomField>
    <fullName>SolutionDate__c</fullName>
    <description>Campo de recebimento de data de solução/fechamento</description>
    <label>Data de Fechamento</label>
    <type>Date</type>
</CustomField>