force-app/main/default/objects/Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
                <label>Atribuido</label>
            </value>
            <value>
                <fullName>DELAYED</fullName>
                <label>Atrasado</label>
            </value>
            <value>
                <fullName>CLOSED</fullName>
                <label>Fechado</label>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>