force-app/main/default/objects/Ticket__c/fields/StatusForm__c.field-meta.xml
<CustomField>
    <fullName>StatusForm__c</fullName>
    <formula>IF(ISPICKVAL ( Status__c,&quot;DELAYED&quot;)=true ,IMAGE(&quot;/resource/1602708578000/Grey?&quot;,&quot;Grey&quot;,18,18) &amp;&quot;Atrasado&quot;, 
			IF(ISPICKVAL ( Status__c,&quot;OPEN&quot;)=true ,IMAGE(&quot;/resource/1602708578000/Red?&quot;,&quot;Red&quot;,18,18)&amp;&quot;Atribuido&quot;,
						IF(ISPICKVAL ( Status__c,&quot;CLOSED&quot;)=true ,IMAGE(&quot;/resource/1602708578000/Grey?&quot;,&quot;Grey&quot;,18,18)&amp;&quot;Fechado&quot;,
									IF(ISPICKVAL ( Status__c,&quot;CANCELLED&quot;)=true ,IMAGE(&quot;/resource/1602708578000/Grey?&quot;,&quot;Grey&quot;,18,18)&amp;&quot;Cancelado&quot;,null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>