force-app/main/default/objects/Ticket__c/fields/TicketId__c.field-meta.xml
<CustomField>
    <fullName>TicketId__c</fullName>
    <description>Campo de identificação externa para o Id dos tickets abertos.</description>
    <externalId>true</externalId>
    <label>Ticket ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>